--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Open%20Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
   }
   
   /* Navigation */
