--- a/css/main.css
+++ b/css/main.css
@@ -24,10 +24,8 @@ nav {
 }
 
 .logo-container > a {
-    color: ghostwhite;
     text-decoration: none;
-    font-weight: 700;
-    font-size: 26px;
+    max-width: 100px;
 }
 
 .navigation-items {
