--- a/css/main.css
+++ b/css/main.css
@@ -81,3 +81,21 @@ nav {
     background-color: blue;
     min-height: 600px;
 }
+/* Hero Gradient Animation */
+.gradient-background {
+    background: linear-gradient(22deg,#0604ff,#0090e7,#00f9c2);
+    background-size: 180% 180%;
+    animation: gradient-animation 18s ease infinite;
+  }
+  
+  @keyframes gradient-animation {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
