--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,50 @@
     font-family: 'Open Sans', sans-serif;
   }
   /* Navigation */
+    
+.navigation li {
+
+      display: block;
+      float: left;
+      padding: 1rem;
+      position: relative;
+      text-decoration: none;
+    transition-duration: 0.5s;
+  }
+    
+.navigation li a {
+    color: #333;
+  }
+  
+  li:hover {
+      background: #545454;
+      cursor: pointer;
+  }
+  
+.navigation ul li ul {
+      background: #fff;
+      visibility: hidden;
+    opacity: 0;
+    min-width: 5rem;
+      position: absolute;
+    transition: all 0.5s ease;
+    margin-top: 1rem;
+      left: 0;
+    display: none;
+  }
+  
+.navigation ul li:hover > ul,
+.navigation ul li ul:hover {
+    visibility: visible;
+    opacity: 1;
+    display: block;
+  }
+  
+.navigation  ul li ul li {
+      clear: both;
+    width: 100%;
+  }
+
   body{
     background-color:#fff;
   }
@@ -16,6 +60,7 @@
   }
   
   header {
+    background-color: #fff;
     position:fixed;
     top:0;
     left:0;
