--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,9 @@
     .fa-x{
       display:none;
     }
+    .socials {
+      display: none;
+    }
     header:has(.hamburger-icon input[type="checkbox"]:checked) .navigation {
       margin-top: 1rem;
       height:100px;
