--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,7 @@
   .socials a {
     float: left;
     color: #333;
-    margin: 10px 0;
+    margin: 0 5px;
     display: block;
     width: 24px;
     height: 24px;
