--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,7 @@ footer {
   align-items: center;
   flex-direction: column;
   padding: 10px 20px;
+  gap: 1.25rem;
 }
 footer .socials {
   display: block;
