--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,7 @@
     }
     header:has(.hamburger-icon input[type="checkbox"]:checked) .navigation {
       margin-top: 1rem;
-      height:100px;
+      height:130px;
     }
     header:has(.hamburger-icon input[type="checkbox"]:checked) .fa-bars {
       display:none;
@@ -116,6 +116,10 @@ footer {
 footer .socials {
   display: block;
 }
+ img.rounded-border {
+  border-radius: 50%;
+  border: 5px solid #fff;
+ }
 
 #hero {
     min-height: 600px;
