--- a/css/main.css
+++ b/css/main.css
@@ -112,6 +112,7 @@ footer {
   flex-direction: column;
   padding: 10px 30px;
   gap: 1.25rem;
+  min-height: 130px;
 }
 footer .socials {
   display: block;
