--- a/css/main.css
+++ b/css/main.css
@@ -80,6 +80,9 @@
     .socials {
       display: none;
     }
+    .halb {
+      width: 100%;
+    }
     header:has(.hamburger-icon input[type="checkbox"]:checked) .navigation {
       margin-top: 1rem;
       height:150px;
