--- a/css/main.css
+++ b/css/main.css
@@ -130,10 +130,12 @@ footer .socials {
 #hero {
     min-height: 600px;
     padding: 10px 20px;
+    overflow: hidden;
 }
 .halb {
   width: 50%;
   float: left;
+  padding: 10%;
 }
 /* Hero Gradient Animation */
 .gradient-background {
