--- a/css/main.css
+++ b/css/main.css
@@ -134,8 +134,13 @@ footer .socials {
     overflow: hidden;
 }
 
-#hero h1 {
+#hero h1{
   color:#fff;
+  text-transform: uppercase;
+}
+
+#hero h2 {
+  color: #fff;
   text-transform: uppercase;
 }
 
@@ -151,7 +156,7 @@ footer .socials {
 }
 /* Hero Gradient Animation */
 .gradient-background {
-    background: linear-gradient(22deg,#0604ff,#0090e7,#00f9c2);
+    background: linear-gradient(22deg,#0604ff,);
     background-size: 180% 180%;
     animation: gradient-animation 18s ease infinite;
 }
