--- a/css/main.css
+++ b/css/main.css
@@ -123,7 +123,7 @@ footer .socials {
   border: 10px solid #fff;
   width: 100%;
   height: auto;
-  padding: 5%;
+  margin: 5%;
   box-shadow: 0px 0px 10px #222;
 }
 
