--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,7 @@ footer {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 10px 30px;
+  padding: 20px;
   gap: 1.25rem;
   margin-top: auto;
 }
