--- a/css/main.css
+++ b/css/main.css
@@ -124,9 +124,12 @@ footer .socials {
  img.rounded-border {
   border-radius: 50%;
   border: 10px solid #fff;
-  width: 80%;
+  width: 100%;
   height: auto;
   box-shadow: 0px 0px 10px #222;
+}
+.me-photo {
+  padding: 10%;
 }
 
 #hero {
