--- a/css/main.css
+++ b/css/main.css
@@ -128,8 +128,8 @@ footer .socials {
   height: auto;
   box-shadow: 0px 0px 10px #222;
 }
-.me-photo {
-  padding: 10%;
+.me-photo, .greet {
+  padding: 20%;
 }
 
 #hero {
