--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,8 @@
     color: #333;
   }
   
-  
+  /* Responsive */
+
   @media screen and (max-width: 600px) {
     header {
       display: block;
@@ -85,6 +86,9 @@
     }
     #hero {
       flex-direction: column !important;
+    }
+    .greet {
+      font-size: 1rem !important;
     }
     header:has(.hamburger-icon input[type="checkbox"]:checked) .navigation {
       margin-top: 1rem;
@@ -131,7 +135,9 @@ footer .socials {
 .me-photo, .greet {
   padding: 8%;
 }
-
+.greet {
+  font-size: 1.5rem;
+}
 #hero {
     min-height: 100vh;
     padding: 10px 20px;
