--- a/css/main.css
+++ b/css/main.css
@@ -149,8 +149,12 @@ footer .socials {
     justify-content: space-around;
 }
 #page {
-  padding: 10px 20px;
+  padding: 30px 20px;
   overflow: hidden;
+}
+
+#page p {
+  padding-top: 20px;
 }
 
 #hero h1 {
