--- a/css/main.css
+++ b/css/main.css
@@ -154,7 +154,15 @@ footer .socials {
 }
 
 #page p {
-  padding-top: 20px;
+  padding: 20px 0;
+}
+
+#page a {
+  color: #0090e7;
+}
+
+#page h2 {
+  padding-bottom: 20px;
 }
 
 #hero h1 {
