--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 /* Navigation */
 body {
 	background-color: #fff;
-	min-height: 100vh;
+	min-height: 100%;
 	display: flex;
 	flex-direction: column;
 }
