--- a/css/main.css
+++ b/css/main.css
@@ -171,6 +171,7 @@ img.rounded-border {
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-around;
+  min-height: 87vh;
 }
 
 #page {
