--- a/css/main.css
+++ b/css/main.css
@@ -132,7 +132,7 @@ header {
 
 /* Content CSS */
 footer {
-	background-color: #fafafa;
+	background-color: #222;
 	width: 100%;
 	display: flex;
 	justify-content: center;
@@ -141,6 +141,11 @@ footer {
 	padding: 20px;
 	gap: 1.25rem;
 	margin-top: auto;
+  color: #fafafa;
+}
+
+footer a{
+  color:#fafafa;
 }
 
 footer .socials {
