revert dark footer

--- a/css/main.css
+++ b/css/main.css
@@ -132,7 +132,7 @@ header {
 
 /* Content CSS */
 footer {
-	background-color: #222;
+	background-color: #fafafa;
 	width: 100%;
 	display: flex;
 	justify-content: center;
@@ -141,11 +141,6 @@ footer {
 	padding: 20px;
 	gap: 1.25rem;
 	margin-top: auto;
-  color: #fafafa;
-}
-
-footer a{
-  color:#fafafa;
 }
 
 footer .socials {
@@ -176,7 +171,7 @@ img.rounded-border {
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-around;
-  min-height: 87vh;
+  min-height: 87v;
 }
 
 #page {
